<resources>
    <string name="app_name">伊的家</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="down_home_text">首页</string>
    <string name="down_guang_text">逛·发现</string>
    <string name="down_search_text">搜索</string>
    <string name="down_shopping_text">购物车</string>
    <string name="down_my_text">我的商城</string>
    <string name="main_order_text">我的订单</string>
    <string name="main_favorite_text">收藏夹</string>
    <string name="main_event_text">活动馆</string>
    <string name="main_vip_text">会员购</string>
    <string name="main_history_text">浏览历史</string>
    <string name="main_voucher_text">积分卡券</string>
    <string name="main_skin_test_text">肌肤测试</string>
    <string name="main_message_center_text">充值中心</string>
    <string name="main_mall_notice_text">商城公告：</string>
    <string name="searchLabel">搜索</string>
    <string name="searchHint">搜索商品</string>
    <string name="searchCancel">取消</string>
    <string name="selled_num">销量</string>
    <string name="price">价格</string>
    <string name="popularity">人气</string>
    <string name="service">a</string>
    <string name="tip">退货原因</string>
    <string name="bad_network">网络不给力</string>
    <string name="no_product">该商品已下架或不存在！</string>
    <string name="filter">筛选</string>
    <string name="filter_all">全部</string>
    <string name="unit">元</string>
    <string name="no_network">网络未连接，请检查您的网络连接状态！</string>
    <string name="nomore">没有更多了！</string>
    <string name="searching">正在查询</string>
    <string name="success_del">success成功</string>
    <string name="success_save_order">success录入成功</string>
    <string name="success_pay_order">success付款成功</string>
    <string name="success_sign_order">success签收成功</string>
    <string name="success_cancel_order">取消订单成功！</string>
    <string name="time_out">连接超时,请重试!</string>
    <string name="no_search_result">无搜索结果</string>
    <string name="login_error">用户不存在或密码错误</string>
    <string name="update_time">上次更新于</string>
    <string name="buy_nothing">您还未购买任何商品</string>
    <string name="price_error">价格出错，请联系我们的客服进行修改！</string>
    <string name="none_code">暂无</string>
    <string name="add_fav_scs">加入收藏成功!</string>
    <string name="add_fav_fail">抱歉！加入收藏失败。</string>
    <string name="guang_again">再逛逛</string>
    <string name="go2cart">去登录</string>
    <string name="add_cart_scs">商品已成功加入购物车</string>
    <string name="add_cart_scs_title">添加成功</string>
    <string name="new_address">新增</string>
    <string name="manage_address">收货地址管理</string>
    <string name="wrong_input">您的输入有问题</string>
    <string name="all_order">全部订单</string>
    <string name="complete_order">已完成订单</string>
    <string name="deliver_order">已发货订单</string>
    <string name="wait_deliver">待发货订单</string>
    <string name="wait_pay">待付款订单</string>
    <string name="order_time_week">近一周</string>
    <string name="order_time_month">近一月</string>
    <string name="order_time_year">近一年</string>
    <string name="check_logistics">查看物流</string>
    <string name="ship_post">快递</string>
    <string name="please_login">您还未登陆，请先登陆!</string>
    <string name="del_fav_ok">删除收藏成功!</string>
    <string name="none_comment">暂无评论</string>
    <string name="select_pay_type">请选择支付方式</string>
    <string name="exit">再按一次返回键退出应用</string>
    <string name="load_data_fail">数据加载失败</string>
    <string name="refresh_data">请检查您的手机是否联网，点击按钮重新加载</string>
    <string name="success_cancel_order1">检查订单失败</string>
    <string name="gocart">购物车</string>
    <string name="delete_produce">删除</string>
    <string name="produce_detail">查看商品详情</string>
    <string name="produce_collect">收藏</string>
    <string name="my_collect">我的收藏</string>
    <string name="alreay_collect">该商品已经在您的收藏夹里了</string>
    <string name="cart_contorl">购物车操作</string>
    <string name="login_success">登陆成功</string>
    <string name="person_message">消息中心</string>
    <string name="option">意见反馈</string>
    <string name="commit">提交</string>
    <string name="commit_compelte">提交成功</string>
    <string name="recomend">应用推荐</string>
    <string name="evaluation">评价晒单</string>
    <string name="person_evaluation">评价</string>
    <string name="login_acount">登录账户</string>
    <string name="login_title">登录</string>
    <string name="regist">注册</string>
    <string name="equal">注册成功</string>
    <string name="obtain">验证码不能为空</string>
    <string name="regist_false">2次输入的密码不一致</string>
    <string name="pwd_length">密码长度不能小于6</string>
    <string name="phone">请输入正确的手机号码</string>
    <string name="retrun_produce">申请退换货</string>
    <string name="order_detail">订单详情</string>
    <string name="mix">已经是最小值了</string>
    <string name="no_token_id">订单号为空或位数不对，请检查输入的订单号！</string>
    <string name="exchanged">退换货</string>
    <string name="produce_exchange">商品赠送换购</string>
    <string name="exchange_produce">您的积分满足了赠送商品和积分换购商品的要求，是否进行商品赠送换购.</string>
    <string name="my_voucher">对不起，您当前的积分不够</string>
    <string name="show_voucher">您当前的积分为:</string>
    <string name="waiting4open">此功能尚未开通，请期待</string>
    <string name="tips">提示</string>
    <string name="sure">确定</string>
    <string name="del_order">确定删除订单?</string>
    <string name="cancel_order">确定取消订单?</string>
    <string name="fail_cancel_order">抱歉，取消订单失败！</string>
    <string name="amount">数量:</string>
    <string name="complete">完成</string>
    <string name="retrun_back">确定退出登录</string>
    <string name="cancel">取消</string>
    <string name="free_post">您所购买的商品，符合免邮的标准，我们将免邮提供您。</string>
    <string name="delete_address">是否确认删除地址</string>
    <string name="country_city">省市区</string>
    <string name="sheng">省份</string>
    <string name="shi">市区</string>
    <string name="xianzhen">县镇</string>
    <string name="no_cart">购物车</string>
    <string name="no_cart1">购物车1</string>
    <string name="sure_commit">确认您所选购的换购商品</string>
    <string name="address_tip">请选择您所有地区信息。</string>
    <string name="delete_produce1">删除商品</string>
    <string name="sure_delete_produce">确认删除该商品</string>
    <string name="load_addresses">亲，您还没有添加地址哦！</string>
    <string name="load_addresses1">任务正在执行中</string>
    <string name="load_addresses2">正在加载地址。。。</string>
    <string name="edit_about">关于</string>
    <string name="history_watch">浏览历史记录</string>
    <string name="all_delete">删除</string>
    <string name="delete_history">清空历史记录</string>
    <string name="sure_delete_history">确认清空浏览历史？</string>
    <string name="clean">清空</string>
    <string name="zhanwulishishuju">亲，您的浏览记录为空</string>
    <string name="skin_test_frist">亲，已经是第一题了</string>
    <string name="skin_test_last">亲，已经是最后一题了</string>
    <string name="year">1980</string>
    <string name="month">01</string>
    <string name="day">01</string>
    <string name="pre">下一题</string>
    <string name="skin_name">姓名不能为空</string>
    <string name="skin_bir">请选择出生日期</string>
    <string name="skin_qq">qq号码不能为空</string>
    <string name="skin_qq_error">qq号码长度不正确</string>
    <string name="skin_phone">手机号码不能为空</string>
    <string name="zto">中通</string>
    <string name="sto">申通</string>
    <string name="yto">圆通</string>
    <string name="yunda">韵达</string>
    <string name="ems_ex">EMS</string>
    <string name="uc_ex">优速</string>
    <string name="lbex">龙邦</string>
    <string name="ttkdex">天天</string>
    <string name="qfkd">全峰</string>
    <string name="best_ex">百世</string>
    <string name="yanshimei">妍诗美专业皮肤测试</string>
    <string name="yanshimei_number">请输入服务号</string>
    <string name="yanshimei_start">输入服务号立即开启美肌测试</string>
    <string name="yanshimei_answer_title">\t\t为了方便我们的护肤顾问为您服务，以及免费获取妍诗美的护肤资讯，请您留下您的相关信息</string>
    <string name="skin_check">亲，请先选择一个或多个选项</string>
    <string name="loading">努力加载中....</string>
    <string name="no_address_title">地址信息</string>
    <string name="no_address_content">亲，您还未填写收货地址，是否新增一个</string>
    <string name="qq_hao">QQ:</string>
    <string name="qq_quen">QQ群:</string>
    <string name="no_find_data">亲，未搜索岛数据</string>
    <string name="err_bir">亲，请输入正确的出生日期</string>
    <string name="feedback_opinion">请输入您的反馈意见</string>
    <string name="feedback_contact">联系方式:邮箱/QQ/手机</string>
    <string name="feedback">意见反馈</string>
    <string name="price_30">30元</string>
    <string name="price_50">50元</string>
    <string name="price_100">100元</string>
    <string name="price_contact">单价：</string>
    <string name="address_contact">归属地：</string>
    <string name="phone_number"> 联系人</string>
    <string name="yidejia">伊的家商城</string>
    <string name="phone_number1">手机号码:</string>
    <string name="phone_detail">订单信息:</string>
    <string name="phone_new">产品信息:</string>
    <string name="phone_news">广东联通话费100元充值</string>
    <string name="phone_data">充值号码:</string>
    <string name="phone_sum">应付总金额:</string>
    <string name="phone_pay">请选择支付方式:</string>
    <string name="zhifubao_pay">支付宝客户端</string>
    <string name="zhifubao_wangye_pay">需安装支付宝手机钱包客户端</string>
    <string name="zhifubao_wangye_pay_list">支付宝网页支付</string>
    <string name="zhifubao_wangye_pay_list_card">可银行卡支付</string>
    <string name="yinliang_pay">银联支付</string>
    <string name="yinliang_pay_list">银联支付</string>
    <string name="caifutong_pay">财付通支付</string>
    <string name="caifutong_pay_list">可银行卡支付</string>
    <string name="pay_commit">立即支付</string>
    <string name="yirihui">【 伊日惠 】</string>
    <string name="yirihui_add">今日优惠价限时抢购，每日限量，先抢先得</string>
    <string name="produce_price">￥178.00</string>
    <string name="must_pay">秒抢</string>
    <string name="produce_detail_add">植物清逗修复精华</string>
    <string name="hour">01</string>
    <string name="mint">50</string>
    <string name="second">30</string>
    <string name="maohao">:</string>
    <string name="all_buy">大家都在买</string>
    <string name="watch_all">查看全部 ></string>
    <string name="all_buy_detail">时间轴套装</string>
    <string name="all_buy_detail_add">保养 补水 修护 增加弹性</string>
    <string name="produce_price_yuan">￥78.00元</string>
    <string name="free_pay_title">随心逛</string>
    <string name="VIP">VIP0</string>
    <string name="mall_wait_pay">待付款   |</string>
    <string name="mall_wait_deliver">待发货   |</string>
    <string name="already_deliver">已发货   |</string>
    <string name="already_compelte">已完成   |</string>
    <string name="wait_coment">待评价   |</string>
    <string name="show">晒单</string>
    <string name="shell">已出售：</string>
    <string name="comment">评价：</string>
    <string name="show_order">晒单：</string>
    <string name="brand">品牌：</string>
    <string name="product_id">商品编号：</string>
    <string name="standard_text">规格：</string>
    <string name="match_goods">推荐搭配</string>
    <string name="produce_comment">商品评论</string>
    <string name="produce_imagecomment">商品图文详情</string>
    <string name="back">返回</string>
    <string name="go_pay">去结算</string>
    <string name="main_yirihui">伊日惠</string>
    <string name="account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_keep_state">保持登陆状态</string>
    <string name="login_find_psw">找回密码</string>
    <string name="login_find_regist">快速注册</string>
    <string name="login_must">立即登陆</string>
    <string name="find_hint_account">请输入您要找回的账号</string>
    <string name="find_hint_pwd">输入短信验证码</string>
    <string name="find_new_pwd">设置新密码</string>
    <string name="find_new_pwd_sure">确认新密码</string>
    <string name="find_complete">完成</string>
    <string name="regist_complete">确认密码</string>
    <string name="regist_service">《服务条款》</string>
    <string name="regist_must">立即注册</string>
    <string name="comment_score">评分</string>
    <string name="phone_number_add">13412333354</string>
    <string name="address_produce">收货地址:</string>
    <string name="pay_way">请选择支付方式:</string>
    <string name="pay_way_sf">请选择配送方式:</string>
    <string name="buy_kind">购物清单</string>
    <string name="go_pay_show_pay">应付总额：</string>
    <string name="go_pay_show_pay_money">￥</string>
    <string name="go_pay_show_pay_money_add">(包含快递费用)</string>
</resources>