<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_phone_contact_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            android:text="@string/phone_number1" />

        <EditText
            android:id="@+id/et_inputnumber"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/tv_phone_contact_phone_number"
            android:background="@null"
            android:inputType="number" />

        <ImageView
            android:id="@+id/iv_bottom_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_phone_contact_phone_number"
            android:layout_toRightOf="@id/et_inputnumber"
            android:contentDescription="@string/phone_number"
            android:src="@drawable/down_guang_hover" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_price_30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_30" />

        <Button
            android:id="@+id/bt_price_50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_50" />

        <Button
            android:id="@+id/bt_price_100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_100" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_price_danjia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/price_contact" />

        <TextView
            android:id="@+id/tv_price_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_price_danjia"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/tv_price_danjia" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_price_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/address_contact" />

        <TextView
            android:id="@+id/tv_address_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_price_address"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/tv_price_address" />
    </RelativeLayout>

    <Button
        android:id="@+id/iv_commit_phone_contace"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_background"
        android:contentDescription="@string/phone_number"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>