<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >
            
      
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/phone_detail"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_contact_sure_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:text="@string/phone_new"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/tv_contact_sure_detail"
            android:text="@string/phone_news"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_contact_sure_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:text="@string/phone_data"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_contactsure_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/tv_contact_sure_number"
            android:text="@string/phone_news"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_contact_sure_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:text="@string/phone_sum"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_contactsure_number_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/tv_contact_sure_sum"
            android:text="@string/phone_news"
            android:textSize="18sp" />
    </RelativeLayout>
     <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/new_menubg_up" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/phone_pay"
                    android:textSize="24sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/go_pay_zhifubao_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/new_menubg_middle" >

                <ImageView
                    android:id="@+id/go_pay_zhifubao_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/yidejia"
                    android:src="@drawable/alipay_app" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="28dp"
                    android:layout_toRightOf="@id/go_pay_zhifubao_image"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/go_pay_zhifubao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhifubao_pay"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhifubao_wangye_pay"
                        android:textSize="12sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/zhifubao_checkbox"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/go_pay_zhifubao_wangyezhifu_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/new_menubg_middle" >

                <ImageView
                    android:id="@+id/go_pay_zhifubao_wangyezhifu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/yidejia"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/alipay" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/go_pay_zhifubao_wangyezhifu"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/go_pay_zhifubaowangye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhifubao_wangye_pay_list"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhifubao_wangye_pay_list_card"
                        android:textSize="12sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/zhufubaowangye_checkbox"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/go_pay_zhifubao_yinlian_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/delivery_address_down" >

                <ImageView
                    android:id="@+id/go_pay_zhifubao_yinlian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/yidejia"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/unionpay" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/go_pay_zhifubao_yinlian"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/go_pay_yinlianzhifu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yinliang_pay"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yinliang_pay_list"
                        android:textSize="12sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/yinlian_checkbox"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:clickable="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/go_pay_zhifubao_caifutong_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/commentbg_down" >

                <ImageView
                    android:id="@+id/go_pay_zhifubao_caifutong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/yidejia"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/tenpay" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/go_pay_zhifubao_caifutong"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/go_pay_caifubaowangye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caifutong_pay"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caifutong_pay_list"
                        android:textSize="12sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/caifutong_checkbox"
                    style="@style/CustomCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:clickable="false" />
            </RelativeLayout>

            <Button 
                android:id="@+id/contactsure_commit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/pay_commit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                />
                
            
      
        </LinearLayout>
    </ScrollView>
</LinearLayout>