<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:id="@+id/all_order_linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/all_order_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/selecter_bg_sort_sell"
            android:gravity="center"
            android:text="@string/order_time_week"
            android:textColor="@color/search_result_top" />

        <TextView
            android:id="@+id/all_order_moonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_weight="1.0"
            android:background="@drawable/selecter_bg_sort_price"
            android:gravity="center"
            android:text="@string/order_time_month"
            android:textColor="@color/dark_black" />

        <TextView
            android:id="@+id/all_order_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/selecter_bg_sort_popular"
            android:gravity="center"
            android:text="@string/order_time_year"
            android:textColor="@color/dark_black" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/all_order_relative_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/all_order_linearlayout1" >

        <ImageView
            android:id="@+id/iv_bottom_line"
            android:layout_width="40dp"
            android:layout_height="0dip"
            android:contentDescription="@string/yidejia"
            android:scaleType="matrix"
            android:src="#fff" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/order_framelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/all_order_relative_line" />

</RelativeLayout>